--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
-    "koa-static": "^3.0.0"
+    "koa-static": "^3.0.0",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
