--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "LightCloud_server",
+  "name": "lightcloud-server",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
-    "dev": "./node_modules/.bin/nodemon bin/www",
-    "prd": "pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "dependencies": {
-    "debug": "^2.6.3",
-    "koa": "^2.2.0",
-    "koa-bodyparser": "^3.2.0",
+    "debug": "~2.6.8",
+    "ejs": "~2.5.5",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
-    "koa-logger": "^2.0.1",
-    "koa-onerror": "^1.2.1",
-    "koa-router": "^7.1.1",
+    "koa-logger": "^3.0.0",
+    "koa-onerror": "^3.1.0",
+    "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
-    "mysql": "^2.16.0"
+    "koa-views": "^6.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.8.1"
+    "babel-eslint": "7.1.1",
+    "eslint": "3.18.0"
   }
 }
